# vigilant-insn2src-mapper

./: CMakeLists.txt  README.md  build.sh
common/: CMakeLists.txt
common/inc/common/: ILogger.hpp  LogManager.hpp  Logger.hpp
common/src/: ILogger.cpp  LogManager.cpp  Logger.cpp
data/wcet-lib/avr/libc-1.8.0/: README  generate_library.py  libcfuncs.txt
data/wcet-lib/avr/libc-1.8.0/atmega128/: wcet.lib
doc/draw.io/: mapper.xml  overview.xml
elf2flow/: CMakeLists.txt  README.md  main.cpp
libbincfg/: CMakeLists.txt
libbincfg/inc/bincfg/: Log.hpp
libbincfg/inc/bincfg/arch/: ArmV5FlowGenerator.hpp  ArmV5Instruction.hpp  AvrFlowGenerator.hpp  AvrInstruction.hpp  Instruction.hpp  archs.def  archs.h  archs.h.in
libbincfg/inc/bincfg/disasm/: ElfDisassemblyReader.hpp
libbincfg/inc/bincfg/dwarf/: DwarfAttribute.hpp  DwarfData.hpp  DwarfDie.hpp  DwarfForm.hpp  DwarfLocation.hpp  DwarfReader.hpp  dwarf.md
libbincfg/inc/bincfg/flow/: BasicBlock.hpp  CsvFlowExporter.hpp  DotFlowExporter.hpp  Flow.hpp  FlowExporter.hpp  FlowGenerator.hpp  FlowGeneratorFactory.hpp  FlowManager.hpp  JsonFlowExporter.hpp
libbincfg/src/: Log.cpp
libbincfg/src/arch/: ArmV5FlowGenerator.cpp  ArmV5Instruction.cpp  AvrFlowGenerator.cpp  AvrInstruction.cpp  Instruction.cpp
libbincfg/src/disasm/: ElfDisassemblyReader.cpp
libbincfg/src/dwarf/: DwarfAttribute.cpp  DwarfData.cpp  DwarfDie.cpp  DwarfForm.cpp  DwarfLocation.cpp  DwarfReader.cpp
libbincfg/src/flow/: BasicBlock.cpp  CsvFlowExporter.cpp  DotFlowExporter.cpp  Flow.cpp  FlowExporter.cpp  FlowGenerator.cpp  FlowGeneratorFactory.cpp  FlowManager.cpp  JsonFlowExporter.cpp
py-mapping/: .gitignore  allbenchs.sh  arm-trivial-spec.csv  avr-spec.csv  example.sh  example_loop_info.json  main.py  mapping.sh  merge_mapping.py  print_profile.py  test.py
py-mapping/extsolv/: __init__.py  ext_lpsolve.py  test_lp.py
py-mapping/flow/: __init__.py  dominator.py  loop_analysis.py  region.py  render.py  transformation.py  transformer.py
py-mapping/fparser/: __init__.py  control_flow.py  disassembly.py  dwarf.py  example_otawa2json.sh  otawa2json.py  otawaflows.py
py-mapping/genarch/: __init__.py  caches.py
py-mapping/mapping/: __init__.py  completer.py  ctrldep_mapper.py  domlump_mapper.py  edge_matcher.py  graphmap.py  homo_mapper.py  linelump_mapper.py  loop_matcher.py  mapper.py  skip_mapper.py
py-mapping/report/: __init__.py
test/: CMakeLists.txt
test/benchmarks/: .gitignore  PROBLEMS.txt  avr-spec.csv
test/benchmarks/adpcm-encode/O0/: Makefile  adpcm_i.c  intrinsics.txt
test/benchmarks/adpcm-encode/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/adpcm-encode/O0-arm/wcet-cbmc/: adpcm_i.in
test/benchmarks/adpcm-encode/O1/: Makefile  adpcm_i.c
test/benchmarks/bs/: Makefile
test/benchmarks/cnt/: .gitignore
test/benchmarks/cnt/O0/: Makefile  cnt_i.c
test/benchmarks/cnt/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/cnt/O1/: Makefile  cnt_i.c
test/benchmarks/cover/O0-arm/: Makefile  cfg.xml  cover_allflows.csv  main.elf.ffx  sim.cfg
test/benchmarks/cover/O0-pre/: Makefile  cover_i.c
test/benchmarks/cover/O1-pre/: Makefile  cover_i.c  loopinfo.txt
test/benchmarks/crc/O0/: Makefile  crc_i.c  dwarfdump.2012-dw2  dwarfdump.2012-dw3  dwarfdump.2012-dw4  dwarfdump.2012-dw5  dwarfdump.2019-dw2  dwarfdump.2019-dw3  dwarfdump.2019-dw4  dwarfdump.2019-dw5  graphstyle.css  graphstyle.js  main.line  main.rawline  mapping_icrc.csv  mapping_icrc1.csv  mapping_main.csv
test/benchmarks/crc/O0-arm/: Makefile  cfg.xml  main.elf.ffx  owcet-script.osx  sim.cfg  wcet.cfg
test/benchmarks/crc/O1/: Makefile  crc_i.c
test/benchmarks/discr-test/O1/: Makefile  main.c
test/benchmarks/fdct/O0/: Makefile  fdct_i.c
test/benchmarks/fdct/O0-arm/: .gitignore  Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/fdct/O1/: Makefile  fdct_i.c
test/benchmarks/fibcall/: .gitignore
test/benchmarks/fibcall/O0/: Makefile  fibcall_i.c
test/benchmarks/fibcall/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/fibcall/O1/: Makefile  fibcall_i.c
test/benchmarks/insertsort/O0/: Makefile
test/benchmarks/insertsort/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/insertsort/O1/: Makefile  insertsort_i.c
test/benchmarks/isort_c/O0/: Makefile  isort_c.c  isort_c_allflows.csv
test/benchmarks/isort_c/O1/: Makefile  isort_c.c  isort_c_allflows.csv
test/benchmarks/jfdctint/O0/: Makefile  jfdctint.c  jfdctint_i.c
test/benchmarks/jfdctint/O0-arm/: Makefile  cfg.xml  jfdctint.c  jfdctint_allflows.csv  sim.cfg  wcet.cfg
test/benchmarks/jfdctint/O1/: Makefile  jfdctint_i.c
test/benchmarks/matmult/O0/: Makefile  matmult_i.c
test/benchmarks/matmult/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/matmult/O1/: Makefile  matmult_i.c
test/benchmarks/multiexpr/O0/: Makefile  main.c  main.line  main_allflows.csv
test/benchmarks/ns/O0/: Makefile  ns_i.c
test/benchmarks/ns/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/ns/O1/: Makefile  ns_i.c
test/benchmarks/nsichneu/O0/: Makefile  nsichneu_i.c
test/benchmarks/nsichneu/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/nsichneu/O1/: Makefile  loopinfo.txt  nsichneu_i.c
test/benchmarks/statemate/O0/: Makefile  statemate_allflows.csv  statemate_i.c
test/benchmarks/statemate/O0-arm/: Makefile  cfg.xml  main.elf.ffx  sim.cfg  wcet.cfg
test/benchmarks/switch-case/O0/: Makefile  swcase.c  swcase_allflows.csv  swcase_i.c
test/benchmarks/ud/O0/: Makefile  mapping_ludcmp.csv  mapping_main.csv  ud_i.c
test/benchmarks/ud/O0-arm/: Makefile  cfg.xml  main.elf.ffx  otawa-memoryconfig.xml  sim.cfg  wcet.cfg
test/benchmarks/ud/O1/: Makefile  ud_i.c
test/elf2flow/: .gitignore  Makefile  main.c
test/test-01/: CMakeLists.txt  main.cpp
test/test-02/: CMakeLists.txt  main.cpp
test/test-03/: CMakeLists.txt  main.cpp
test/test-04/: CMakeLists.txt  main.cpp
(+157 files in other folders)
